// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`not-found > should render not found for invites route 1`] = `
<h2
  class="text-2xl font-semibold"
>
  This invite could not be found.
</h2>
`;

exports[`not-found > should render not found for list route 1`] = `
<h2
  class="text-2xl font-semibold"
>
  This list could not be found.
</h2>
`;
